--- a/style.css
+++ b/style.css
@@ -173,9 +173,6 @@ width : 97%;
 .form-error-arg {
 font-weight : bold;
 }
-textarea {
-font : normal normal 13px arial, sans-serif;
-}
 .aria-only-help {
 font-size : 0;
 left : -9999px;
@@ -262,6 +259,7 @@ font-weight : bold;
 display : block;
 color : #666;
 margin : 0.1em 0 0.25em 0;
+font-size: 75%;
 }
 .ss-textarea {
 max-width : 99%;
