Add the crib css/js into each page's header.

--- a/style.css
+++ b/style.css
@@ -133,6 +133,55 @@ a#register {
 	height: 470px;
 }
 
+/* Crib stuff */
+.crib_ctl {
+	padding-right: 0.4em;
+	cursor: pointer;
+}
+.crib_steps {
+	display: none;
+}
+.crib_steps td {
+	padding-bottom: 0.1em;
+}
+.crib_header td {
+	padding-top: 0.2em;
+}
+.crib_header {
+	border: 1px solid gray;
+}
+.crib_interlude {
+	text-align: center;
+}
+.crib_interlude td {
+	padding-top: 0.2em;
+}
+.crib_table {
+	width: 100%;
+}
+.crib_step_table tr td {
+	vertical-align: top;
+}
+.crib_step_bars {
+	padding-left: 1em;
+	padding-right: 2em;
+}
+.crib_name {
+	font-weight: bold;
+	cursor: pointer;
+}
+@media print {
+	.crib_dropdown {
+		display: none;
+	}
+	.crib_ctl {
+		display: none;
+	}
+	.crib_steps {
+		display: table-row;
+	}
+}
+
 /* Imported stuff from Google forms */
 .ss-logo-link {
 display : block;
