cribs: Add Youtube support to the crib generator so we can link to DancieMaetions.

--- a/style.css
+++ b/style.css
@@ -172,6 +172,9 @@ a#register {
 	cursor: pointer;
 }
 @media print {
+	.crib_youtube {
+		display: none;
+	}
 	.crib_dropdown {
 		display: none;
 	}
