various: Hide map links when printing, and remove the blue/underline context from all links when printing.

--- a/style.css
+++ b/style.css
@@ -66,6 +66,13 @@ body {
 	text-align: center;
 }
 @media print {
+	a {
+		color: black;
+		text-decoration: none;
+	}
+	.maplink {
+		display: none;
+	}
 	#main_title {
 		padding-left: 78px;
 	}
