autocrib: Create a solid middle flushline, and add more vertical separation between dance steps.

--- a/style.css
+++ b/style.css
@@ -168,7 +168,7 @@ a#register {
 	display: none;
 }
 .crib_steps td {
-	padding-bottom: 0.1em;
+	padding-bottom: 0.4em;
 }
 .crib_header td {
 	padding-top: 0.2em;
@@ -190,8 +190,9 @@ a#register {
 }
 .crib_step_bars {
 	white-space: pre;
-	padding-left: 1em;
-	padding-right: 2em;
+	padding-left: 2.25em;
+	padding-right: 0.75em;
+	text-align: right;
 }
 .crib_name {
 	font-weight: bold;
